# gtdapp

./: .gitignore  Makefile  README.md  pyproject.toml  todo.db  usecase-robustness.org
api/backbalancer/proto/: backbalancer.proto
api/project/proto/: project.proto
api/review/proto/: review.proto
api/routemaster/proto/: routemaster.proto
api/task/proto/: task.proto
common/proto/: common.proto
manifest/base/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
manifest/base/encrypted/: secret.yaml
manifest/overlay/dev/: deployment.yaml  ingress.yaml  service.yaml
manifest/overlay/local/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
proto/: backbalancer.proto  calendar.proto  checklist.proto  clarify.proto  common.proto  focus.proto  idp.proto  inbox.proto  project.proto  reference.proto  review.proto  routemaster.proto  task.proto
script/: apply_app.sh  apply_infra.sh  destroy_app.sh  plan_app.sh
services/backbalancer/: .env.local  Dockerfile  Makefile  go.mod
services/backbalancer/cmd/: main.go
services/calendar/proto/: calendar.proto
services/checklist/proto/: checklist.proto
services/clarify/proto/: clarify.proto
services/focus/proto/: focus.proto
services/idp/proto/: idp.proto
services/inbox/: Dockerfile  Makefile  go.mod  go.sum
services/inbox/cmd/: main.go
services/inbox/internal/: repository.go  server.go  stuff.go
services/inbox/proto/: inbox.proto
services/projectmanager/: .gitignore  Makefile  README.md  package-lock.json  package.json
src/gtdapp/: app.py  main.py  sqlite.py
(+11 files in other folders)
