[tool.poetry]
name = "gtdapp"
version = "0.1.0"
description = ""
authors = ["Akira Hayashi <smxshxishxad@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
tk = "^0.1.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
